--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -13,7 +13,9 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 11
-      - name: Test with Gradle
+      - name: Execute tests
         run: ./gradlew clean test
+      - name: Build the project
+        run: ./gradlew build
       - name: Build the Docker image
         run: docker build . --file Dockerfile --tag mbb:$(date +%s)
