--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -5,9 +5,7 @@ image:
 ports:
 - port: 8080
 
-workspaceLocation: "backend"
-
 # List the start up tasks. You can start them in parallel in multiple terminals. See https://www.gitpod.io/docs/44_config_start_tasks/
 tasks:
 - init: echo 'init script' # runs during prebuild
-  command: go get
+  command: echo 'init script'
