--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --prod --base-href /app/",
+    "build": "ng build --prod --aot --base-href /app/",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
@@ -25,9 +25,12 @@
     "@angular/router": "8.2.14",
     "chart.js": "^2.9.3",
     "ng2-charts": "^2.3.0",
+    "ng2-pdf-viewer": "^6.0.2",
     "rxjs": "~6.5.3",
+    "tesseract.js": "^2.0.0-beta.2",
     "tslib": "^1.10.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.9.1",
+    "ng2-pdfjs-viewer": "latest"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.803.19",
@@ -36,7 +39,7 @@
     "@angular/language-service": "8.2.14",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
+    "@types/node": "^8.9.5",
     "codelyzer": "^5.2.0",
     "dyson-generators": "^0.2.1",
     "faker": "^4.1.0",
@@ -47,6 +50,7 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
+    "pdfjs-dist": "^2.2.228",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
