--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,8 +29,7 @@
     "rxjs": "~6.5.3",
     "tesseract.js": "^2.0.0-beta.2",
     "tslib": "^1.10.0",
-    "zone.js": "~0.9.1",
-    "ng2-pdfjs-viewer": "latest"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.803.19",
@@ -39,7 +38,7 @@
     "@angular/language-service": "8.2.14",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^8.9.5",
+    "@types/node": "^8.10.59",
     "codelyzer": "^5.2.0",
     "dyson-generators": "^0.2.1",
     "faker": "^4.1.0",
